Make it compatible with java 8
Although newer java versions should be slightly faster, most code worked fine with java 8, only had to fix a few things.